Update FHIRExtractors.java